fix header z-index

--- a/src/components/events/MainHeader.module.css
+++ b/src/components/events/MainHeader.module.css
@@ -2,12 +2,14 @@
   width: 100%;
   position: sticky;
   inset-block-start: 0;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   padding: 1rem 10%;
   height: 5rem;
   background-color: #202020;
+  isolation: isolate;
 }
 
 .logo {
